--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 			<p>Double-click to edit a todo</p>
 			<p>Created by Oscar Godson</p>
 			<p>Refactored by Christoph Burgmer</p>
+			<p><a href="./test/SpecRunner.html" target="_blank" class="link">Run tests here.</a></p>
 		</footer>
 		<script src="node_modules/todomvc-common/base.js"></script>
 		<script src="js/helpers.js"></script>
