--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 		<title>To-do list app</title>
 		<link rel="stylesheet" href="node_modules/todomvc-common/base.css">
 		<link rel="stylesheet" href="node_modules/todomvc-app-css/index.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+  		<meta name="description" content="Todo Application" />
 	</head>
 	<body>
 		<section class="todoapp">
