Link app and documentation

--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 			<p>Double-click to edit a todo</p>
 			<p>Created by Oscar Godson</p>
 			<p>Refactored by Christoph Burgmer</p>
-			<p><a href="./test/SpecRunner.html" target="_blank" class="link">Run tests here.</a></p>
+			<p><a href="./test/SpecRunner.html" target="_blank" class="link">Run tests here</a></p>
+			<p><a href="./docs/index.html" target="_blank" class="link">Documentation</a></p>
 		</footer>
 		<script src="node_modules/todomvc-common/base.js"></script>
 		<script src="js/helpers.js"></script>
